--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <ol>
                     <li><a href="https://kostya13579.github.io/Certificates/" target="_blank">https://kostya13579.github.io/Certificates/</a><span>..........</span> <span>[ HTML5 & CSS3 ]</span></li>
                     <li><a href="https://kostya13579.github.io/small-JS/" target="_blank">https://kostya13579.github.io/small-JS/</a><span>............</span> <span>[ JavaScript ]</span></li>
-                    <li><a href="https://kidslike.goit.global/" target="_blank">https://kidslike.goit.global/</a><span>...................</span> <span>[ GitHub ]</span></li>
+                    <li><a href="https://kostya13579.github.io/Resume-QA/" target="_blank">https://kostya13579.github.io/Resume-QA/</a><span>...................</span> <span>[ GitHub ]</span></li>
                 </ol>
             </div>
 
@@ -88,7 +88,7 @@
                 <h3>Aditional IT-education</h3>
                 <ol>
                     <li>
-                        <a href="" target="_blank"></a><span>...............................................................</span> <span>[ 2020-2021 Diplomas ]</span></li>
+                        <a href="https://kostya13579.github.io/Resume-QA/" target="_blank">https://kostya13579.github.io/Resume-QA/</a><span>...............................................................</span> <span>[ 2020-2021 Diplomas ]</span></li>
                     <li> QATestLab <a href="https://clients.qatestlab.com/api/common/certificate/dkydm037di122jftol3mbmhhm.pdf" target="_blank">Certificate</a><span>..................................................................................</span> <span>[ 2021 Certificate ]</span></li>
                     <li> Google Digital Workshop ID: 3HP D79 887<a href="https://learndigital.withgoogle.com/digitalworkshop-ua/validate-certificate-code" target="_blank"> Certificate</a><span>........</span> <span>[ 2020 Certificate ]</span></li>
                     <li> EPAM Learn digital platform, self-plased (Software testing introduction, Software development metodoligies)<span>..........................................................................</span> <span>[ 2021 ]</span></li>
