--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h3>Projects</h3>
                 <ol>
                     <li><a href="https://kostya13579.github.io/Certificates/" target="_blank">https://kostya13579.github.io/Certificates/</a><span>..........</span> <span>[ HTML5 & CSS3 ]</span></li>
-                    <li><a href="https://kostya13579.github.io/small-JS/" target="_blank">https://kostya13579.github.io/small-JS/</a><span>.................</span> <span>[ JavaScript ]</span></li>
+                    <li><a href="https://kostya13579.github.io/small-JS/" target="_blank">https://kostya13579.github.io/small-JS/</a><span>..................</span> <span>[ JavaScript ]</span></li>
                     <li><a href="https://kostya13579.github.io/Resume-QA/" target="_blank">https://kostya13579.github.io/Resume-QA/</a><span>.........</span> <span>[ GitHub ]</span></li>
                 </ol>
             </div>
