--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <!-- my work experience -->
             <div class="my-work-experience1">
-                <h3>Work Experience (summary, non IT)</h3>
+                <h3>Work Experience (summary, non-IT)</h3>
                 <!--  company 3-->
                 <h4>Sales & Marketing<span class="orange-text">   Self-employed </span> </h4>
                 <p class="work-time">about 2 years <span class="divider">|</span> Kyiv</p>
