--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h2 class="about-me-profession">QA trainee</h2>
                 <h1 class="my-name">Kostyantyn SKAKLINYOV</h1>
                 <p class="about-me-profession">Kyiv ( ... or anyone place if remotely )</p>
-                <p class="about-me-description">I'm an enthusiastic QA Engineer seeking an entry-level position with <span><b>QATestLab</b></span> company to use my skills in manual QA. I have no a commercial experience just now, but I'am very motivated and strong self-managed man,
+                <p class="about-me-description">I'm an enthusiastic QA Engineer seeking an entry-level position with <span><b>QA</b></span> company to use my skills in manual QA. I have no a commercial experience just now, but I'am very motivated and strong self-managed man,
                     and I am going to become a QA automation specialist in the future.</p>
             </div>
 
