--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h4>Sales & Marketing<span class="orange-text">  Personal computers. Enterprise market</span></h4>
                 <p class="work-time">more than 5 years<span class="divider"> |</span> Kyiv</p>
                 <ul>
-                    <li>Management of the team.</li>
+                    <li>Management of the team (10+).</li>
                     <li>Marketing strategy.</li>
                     <li>Communications with clients. Personal sales. </li>
                 </ul>
@@ -71,9 +71,10 @@
                 <p class="work-time">more than 10 years <span class="divider">|</span> Kyiv, Kharkiv</p>
                 <ul>
                     <li>Management and strategic development of assembling factory. </li>
-                    <li>Project-management, planning, support.</li>
+                    <li>Project-management, planning, reporting, support.</li>
                     <li>Purchasing of the equipment and the spare parts.</li>
                     <li>Organization of the working processes and the product quality management</li>
+                    <li>Product-management (PC-components, like memory, HHD, video-cards ect.)</li>
                 </ul>
             </div>
             <!-- my education -->
