--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <li>Project-management, planning, reporting, support.</li>
                     <li>Purchasing of the equipment and the spare parts.</li>
                     <li>Organization of the working processes and the product quality management</li>
-                    <li>Product-management (PC-components, like memory, HHD, video-cards ect.)</li>
+                    <li>Product-management (PC-components like memory, HHD, video-cards ect.)</li>
                 </ul>
             </div>
             <!-- my education -->
