--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     <li>Management and strategic development of assembling factory. </li>
                     <li>Project-management, planning, reporting, support.</li>
                     <li>Purchasing of the equipment and the spare parts.</li>
-                    <li>Organization of the working processes and the product quality management</li>
-                    <li>Product-management (PC-components like memory, HHD, video-cards ect.)</li>
+                    <li>Organization of the working processes and the product quality management.</li>
+                    <li>Product-management (PC-components: memory, HHD, video-cards ect.).</li>
                 </ul>
             </div>
             <!-- my education -->
