--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                 <p class="work-time">more than 10 years <span class="divider">|</span> Kyiv, Kharkiv</p>
                 <ul>
                     <li>Management and strategic development of assembling factory. </li>
-                    <li>Project-management, planning, reporting, support.</li>
+                    <li>Project management, planning, reporting, support.</li>
                     <li>Purchasing of the equipment and the spare parts.</li>
                     <li>Organization of the working processes and the product quality management.</li>
-                    <li>Product-management (PC-components: memory, HHD, video-cards ect.).</li>
+                    <li>Product management (PC-components: memory, HHD, video-cards etc.).</li>
                 </ul>
             </div>
             <!-- my education -->
