--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
             <!-- about me section -->
             <div class="about-me-section">
 
-                <h2 class="about-me-profession">QA trainee</h2>
+                <h2 class="about-me-profession">Manual QA engineer, junior QA engineer, manual software tester</h2>
                 <h1 class="my-name">Kostyantyn SKAKLINYOV</h1>
                 <p class="about-me-profession">Kyiv ( ... or anyone place if remotely )</p>
-                <p class="about-me-description">I'm an enthusiastic QA Engineer seeking an entry-level position with a QA company to use my skills in manual QA. I have no commercial experience just now, but I'm a very motivated and strong self-managed man, and I am going to become a QA automation specialist in the future.</p>
+                <p class="about-me-description">I'm an enthusiastic QA Engineer seeking an entry-level position with a QA company to use my skills in manual QA. I have no commercial experience just now, but I'm a very motivated and strong self-managed man, and I am going to become a
+                    QA automation specialist in the future. I changed my work from the hardware direction (I had very good confirmed results in hardware) to the newest direction of software. I have a lot of strong work experience in business and very
+                    good skills. Now I learn programming and English every day.</p>
             </div>
 
             <!-- my projects -->
