--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
                 <h2 class="about-me-profession">Manual QA engineer, junior QA engineer, manual software tester</h2>
                 <h1 class="my-name">Kostyantyn SKAKLINYOV</h1>
                 <p class="about-me-profession">Kyiv ( ... or anyone place if remotely )</p>
-                <p class="about-me-description">I'm an enthusiastic QA Engineer seeking an entry-level position with a QA company to use my skills in manual QA. 
-                    I have no commercial experience just now, but I'm a very motivated and strong self-managed man, and I am going to become a
-                    QA automation specialist in the future. I changed my work from the hardware direction (I had very good confirmed results in hardware) 
-                    to the newest direction of software. I have a lot of strong work experience in business and very
+                <p class="about-me-description">I'm an enthusiastic QA Engineer seeking an entry-level position with a QA company to use my skills in manual QA. I have no commercial experience just now, but I'm a very motivated and strong self-managed man, and I am going to become a
+                    QA automation specialist in the future. I changed my work from the hardware direction (I had very good confirmed results in hardware) to the newest direction of software. I have a lot of strong work experience in business and very
                     good skills. Now I learn programming and English every day.</p>
             </div>
 
@@ -40,6 +38,7 @@
                 <ol>
                     <li><a href="https://kostya13579.github.io/Certificates/" target="_blank">https://kostya13579.github.io/Certificates/</a><span>..........</span> <span>[ HTML5 & CSS3 ]</span></li>
                     <li><a href="https://kostya13579.github.io/small-JS/" target="_blank">https://kostya13579.github.io/small-JS/</a><span>..................</span> <span>[ JavaScript ]</span></li>
+                    <li><a href="https://kostya13579.github.io/project11/" target="_blank">https://kostya13579.github.io/project11/</a><span>..................</span> <span>[ JavaScript-11 ]</span></li>
                     <li><a href="https://kostya13579.github.io/Resume-QA/" target="_blank">https://kostya13579.github.io/Resume-QA/</a><span>.........</span> <span>[ GitHub ]</span></li>
                 </ol>
             </div>
