--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <h3>Education</h3>
                 <h4><span class="orange-text">High military school</span></h4>
                 <h4>Engineer</h4>
-                <p class="work-time">1987 - 1991 <span class="divider">|</span> SPb</p>
+                <p class="work-time">1987 - 1991 <span class="divider">|</span> </p>
             </div>
             <div class="my-projects">
 
